# Project-2

./: CMakeLists.txt  average.h  divide.h  exponent.h  expression.h  input.txt  maximum.h  minimum.h  minus.h  modulus.h  multiply.h  operand.cpp  operand.h  parse.cpp  parse.h  plus.h  project2.cpp  subexpression.cpp  subexpression.h  symboltable.cpp  symboltable.h  variable.cpp  variable.h
